src/objects/inscor__Work_Order_Task__c.object
<CustomObject>
    <description>Work Order Task</description>
    <fields>
        <fullName>inscor__AMM_Reference__c</fullName>
        <label>AMM Reference</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Customer Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>inscor__Employee__c</referenceTo>
        <relationshipName>Work_Order_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Comments_Findings__c</fullName>
        <label>Comments/Findings</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Currency__c</fullName>
        <label>Company Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Default_Quoted_Amount__c</fullName>
        <formula>inscor__Quoted_Amount__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Default Quoted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Flat_Rate_Price__c</fullName>
        <formula>inscor__Flat_Rate_Price__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Flat Rate Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Labor_Fixed_Rate__c</fullName>
        <formula>inscor__Labor_Fixed_Rate__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Labor Fixed Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Labor_Rate_NTE__c</fullName>
        <formula>inscor__Labor_Rate_NTE__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Labor Rate NTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Last_Quoted_Price__c</fullName>
        <formula>inscor__Last_Quoted_Price__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Last Quoted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Misc_Fixed_Price__c</fullName>
        <formula>inscor__Misc_Fixed_Price__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Misc Fixed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Misc_NTE__c</fullName>
        <formula>inscor__Misc_NTE__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Misc NTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Parts_Fixed_Price__c</fullName>
        <formula>inscor__Parts_Fixed_Price__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Parts Fixed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Parts_NTE__c</fullName>
        <formula>inscor__Parts_NTE__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Parts NTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Planned_Labor_Cost__c</fullName>
        <formula>inscor__Planned_Labor_Cost__c / BLANKVALUE( inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Planned Labor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Rate_Billed__c</fullName>
        <formula>inscor__Rate_Billed__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Rate Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Task_Price_Billed__c</fullName>
        <formula>inscor__Task_Price_Billed__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Task Price Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Total_Cost_Invoiced__c</fullName>
        <label>Company Total Cost Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Total_Labor_Invoiced__c</fullName>
        <formula>inscor__Total_Labor_Invoiced__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Total Labor Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Total_Misc_Billed__c</fullName>
        <formula>inscor__Total_Misc_Billed__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Total Misc Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Total_Parts_Billed__c</fullName>
        <formula>inscor__Total_Parts_Billed__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Total Parts Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Total_Price_Invoiced__c</fullName>
        <formula>inscor__Total_Price_Invoiced__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Total Price Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Total_Price__c</fullName>
        <formula>inscor__Total_Price__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Order_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Corrective_Action__c</fullName>
        <label>Corrective Action</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Duration__c</fullName>
        <label>Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Rate_Date__c</fullName>
        <label>Exchange Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__External_Comments__c</fullName>
        <label>External Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Flat_Rate_Price__c</fullName>
        <label>Flat Rate Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Flat_Rate_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box for billing a single flat rate amount for entire task. No Parts, Labor or other charges will be billed.</inlineHelpText>
        <label>Flat Rate Task?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Generated_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Generated From</label>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipName>Inharited_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Hours_Billed__c</fullName>
        <label>Hours Billed</label>
        <summarizedField>inscor__Labor_Entry__c.inscor__Hours_Billed__c</summarizedField>
        <summaryForeignKey>inscor__Labor_Entry__c.inscor__Work_Order_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Hours_Entered__c</fullName>
        <label>Hours Entered</label>
        <summarizedField>inscor__Labor_Entry__c.inscor__Hours__c</summarizedField>
        <summaryForeignKey>inscor__Labor_Entry__c.inscor__Work_Order_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Inspect_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inspect Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Inspected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Order_Tasks_Inspected_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Inspected_Date__c</fullName>
        <label>Inspected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Inspection_Details__c</fullName>
        <label>Inspection Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Inspection_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inspection Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Inspection_Status__c</fullName>
        <label>Inspection Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Labor_Fixed_Hours__c</fullName>
        <inlineHelpText>Enter Labor Hours for Fixed Labor</inlineHelpText>
        <label>Labor Fixed Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Labor_Fixed_Rate__c</fullName>
        <inlineHelpText>Enter Labor Fixed Rate</inlineHelpText>
        <label>Labor Fixed Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Labor_Hour_Billing_Type__c</fullName>
        <inlineHelpText>Select Labor Hour Billing Type.</inlineHelpText>
        <label>Labor Hour Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>inscor__Flat_Rate_Task__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Hours</fullName>
                </value>
                <value>
                    <fullName>Actual Hours</fullName>
                </value>
                <value>
                    <fullName>Actual Hrs-Over and Above</fullName>
                </value>
                <value>
                    <fullName>Estimated Hours</fullName>
                    <isActive>false</isActive>
                    <label>Estimated Hours</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Labor_Hours_NTE__c</fullName>
        <inlineHelpText>Labor Hours Not To Exceed Qty</inlineHelpText>
        <label>Labor Hours NTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Labor_Rate_Billing_Type__c</fullName>
        <inlineHelpText>Select a Labor Rate Type. Burden Rate is the Skill Cost while Skill Rate is the Skill Price.</inlineHelpText>
        <label>Labor Rate Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>inscor__Flat_Rate_Task__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Rate</fullName>
                </value>
                <value>
                    <fullName>Skill Burden Rate Markup+/Discount-</fullName>
                </value>
                <value>
                    <fullName>Skill Rate Markup+/Discount-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Labor_Rate_Markup_Discount__c</fullName>
        <inlineHelpText>Enter positive for a Markup (20%) or negative for a Discount (-20%) or 0% for none.</inlineHelpText>
        <label>Labor Rate Markup+/Discount-</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Labor_Rate_NTE__c</fullName>
        <inlineHelpText>Enter Labor Rate Not To Exceed Amount</inlineHelpText>
        <label>Labor Rate NTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Last_Quoted_Price__c</fullName>
        <label>Last Quoted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__MPD_Reference__c</fullName>
        <label>MPD Reference</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Manual_Link__c</fullName>
        <label>Manual Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>inscor__Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Misc_Charge_Billing_Type__c</fullName>
        <inlineHelpText>Select Miscellaneous Charge Billing Method</inlineHelpText>
        <label>Misc Charge Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>inscor__Flat_Rate_Task__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Cost Markup+/Discount-</fullName>
                </value>
                <value>
                    <fullName>Price Markup+/Discount-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Misc_Fixed_Price__c</fullName>
        <inlineHelpText>Misc Fixed Price Amount</inlineHelpText>
        <label>Misc Fixed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Misc_Markup_Discount__c</fullName>
        <inlineHelpText>Enter positive for a Markup (20%) or negative for a Discount (-20%) or 0% for none.</inlineHelpText>
        <label>Misc Markup+/Discount-</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Misc_NTE__c</fullName>
        <inlineHelpText>Enter Miscellaneous Not To Exceed Amount</inlineHelpText>
        <label>Misc NTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Output_Type__c</fullName>
        <inlineHelpText>Controls the displaying of the Task and Parts/Charges/Labor in Quotes and Invoices. Summary only shows the Task, Detail Rollup will show all but roll up Prices to the Task line while Itemized will show the individual prices at the BOM/Labor/Misc.</inlineHelpText>
        <label>Default Output Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hidden</fullName>
                </value>
                <value>
                    <fullName>Summary</fullName>
                </value>
                <value>
                    <fullName>Detail Rollup</fullName>
                </value>
                <value>
                    <fullName>Detail Rollup Hidden Labor</fullName>
                </value>
                <value>
                    <fullName>Detail Itemized</fullName>
                </value>
                <value>
                    <fullName>Detail Itemized Hidden Labor</fullName>
                </value>
                <value>
                    <fullName>Detail</fullName>
                    <isActive>false</isActive>
                    <label>Detail</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Over_Above_Threshold_Hours__c</fullName>
        <inlineHelpText>Enter the threshold above which the labor hours must exceed before billing begins. Only those hours above the threshold will be applied for billing.</inlineHelpText>
        <label>Over &amp; Above Threshold Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Parent_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Task</label>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipName>Work_Order_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Parts_Billing_Type__c</fullName>
        <inlineHelpText>Select Parts Billing Type.</inlineHelpText>
        <label>Parts Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>inscor__Flat_Rate_Task__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Cost Markup+/Discount-</fullName>
                </value>
                <value>
                    <fullName>Price Markup+/Discount-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Parts_Fixed_Price__c</fullName>
        <label>Parts Fixed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Parts_Markup_Discount__c</fullName>
        <inlineHelpText>Enter positive for a Markup (20%) or negative for a Discount (-20%) or 0% for none.</inlineHelpText>
        <label>Parts Markup/Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Parts_NTE__c</fullName>
        <inlineHelpText>Enter Parts Not To Exceed Amount</inlineHelpText>
        <label>Parts NTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Percent_Complete__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Planned_Labor_Cost__c</fullName>
        <label>Planned Labor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Planned_Labor_Hours__c</fullName>
        <label>Planned Labor Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Pricing_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Template</label>
        <referenceTo>inscor__Pricing_Template__c</referenceTo>
        <relationshipName>Work_Order_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quoted_Amount__c</fullName>
        <label>Default Quoted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Rate_Billed__c</fullName>
        <label>Rate Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Reconciled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reconciled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Order_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Reconciled_Date__c</fullName>
        <label>Reconciled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Rejection_Comment__c</fullName>
        <label>Rejection Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Show_WO_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show WO Builder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Summary_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summary Task?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Task_Instructions__c</fullName>
        <label>Task Instructions</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Task_Name__c</fullName>
        <label>Task Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Task_Price_Billed__c</fullName>
        <label>Task Price Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Task_Total_Cost__c</fullName>
        <formula>inscor__Total_Parts_Cost__c +  inscor__Total_Labor_Cost__c +  inscor__Total_Misc_Charge_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Task_Type__c</fullName>
        <label>Task Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Routine</fullName>
                    <default>true</default>
                    <label>Routine</label>
                </value>
                <value>
                    <fullName>Non-Routine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Template_Project__c</fullName>
        <formula>inscor__Work_Order__r.inscor__Template__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Project?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Tool_Assignment_With_Qty__c</fullName>
        <label>Tool Assignment With Qty</label>
        <summaryFilterItems>
            <field>inscor__Tool_Assignment1__c.inscor__Qty_Assigned__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>inscor__Tool_Assignment1__c.inscor__Work_Order_Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Cost_Invoiced__c</fullName>
        <label>Total Cost Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Hours_Unbilled__c</fullName>
        <label>Total Hours Unbilled</label>
        <summarizedField>inscor__Labor_Entry__c.inscor__Hours_Unbilled__c</summarizedField>
        <summaryForeignKey>inscor__Labor_Entry__c.inscor__Work_Order_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Labor_Cost__c</fullName>
        <label>Total Labor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Labor_Hours_Billed__c</fullName>
        <inlineHelpText>Total Hours Billed. If NTE, this will show the not to exceed amount.</inlineHelpText>
        <label>Total Labor Hours Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Labor_Invoiced__c</fullName>
        <label>Total Labor Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Misc_Billed__c</fullName>
        <label>Total Misc Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Misc_Charge_Cost__c</fullName>
        <label>Total Misc Charge Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Parts_Billed__c</fullName>
        <label>Total Parts Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Parts_Cost__c</fullName>
        <label>Total Parts Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Price_Invoiced__c</fullName>
        <label>Total Price Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Instructions__c</fullName>
        <label>Work Instructions - RETIRED</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Name__c</fullName>
        <formula>inscor__Work_Order__r.inscor__Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Status__c</fullName>
        <formula>TEXT(inscor__Work_Order__r.inscor__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>inscor__Work_Order__c</referenceTo>
        <relationshipName>Work_Order_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Work Order Task</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Task_Name__c</columns>
        <columns>inscor__Start_Date__c</columns>
        <columns>inscor__Duration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>inscor__All_Work_Order_Tasks</fullName>
        <columns>NAME</columns>
        <columns>inscor__Sequence__c</columns>
        <columns>inscor__Task_Name__c</columns>
        <columns>inscor__Assigned_To__c</columns>
        <columns>inscor__Work_Order__c</columns>
        <columns>inscor__Work_Order_Name__c</columns>
        <columns>inscor__Task_Type__c</columns>
        <columns>inscor__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Template_Project__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Work Order Tasks</label>
    </listViews>
    <listViews>
        <fullName>inscor__Filtered_WO_Tasks</fullName>
        <columns>NAME</columns>
        <columns>inscor__Sequence__c</columns>
        <columns>inscor__Task_Name__c</columns>
        <columns>inscor__Output_Type__c</columns>
        <columns>inscor__Flat_Rate_Task__c</columns>
        <columns>inscor__Flat_Rate_Price__c</columns>
        <columns>inscor__Parts_Billing_Type__c</columns>
        <columns>inscor__Parts_Markup_Discount__c</columns>
        <columns>inscor__Parts_Fixed_Price__c</columns>
        <columns>inscor__Labor_Rate_Billing_Type__c</columns>
        <columns>inscor__Labor_Rate_Markup_Discount__c</columns>
        <columns>inscor__Labor_Hour_Billing_Type__c</columns>
        <columns>inscor__Labor_Fixed_Hours__c</columns>
        <columns>inscor__Over_Above_Threshold_Hours__c</columns>
        <columns>inscor__Misc_Charge_Billing_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Work_Order__c</field>
            <operation>equals</operation>
            <value>WO-2</value>
        </filters>
        <label>Filtered WO Tasks</label>
    </listViews>
    <nameField>
        <displayFormat>WOT-{0}</displayFormat>
        <label>Work Order Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>inscor__Block_Cancel</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(inscor__Status__c, &apos;Cancelled&apos;), OR( NOT(ISBLANK(inscor__Completed_By__c)), NOT(ISBLANK(inscor__Inspected_By__c ))), false)</errorConditionFormula>
        <errorDisplayField>inscor__Status__c</errorDisplayField>
        <errorMessage>Can&apos;t cancel a Task once Completed By or Inspected By is filled in</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Flat_Rate_Price_Required</fullName>
        <active>true</active>
        <description>When Flat Rate Task checkbox is checked, the Flat Rate Price will be required and used for billing of the Task. The entry can be 0.00 or greater.</description>
        <errorConditionFormula>inscor__Flat_Rate_Task__c == True &amp;&amp; ( ISBLANK(inscor__Flat_Rate_Price__c) || inscor__Flat_Rate_Price__c &lt; 0)</errorConditionFormula>
        <errorMessage>Flat Rate Price required when &apos;Flat Rate Task?&apos; is true.</errorMessage>
    </validationRules>
</CustomObject>